ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana-ingress
 namespace: monitoring
 annotations:
   kubernetes.io/ingress.class: nginx
#   nginx.ingress.kubernetes.io/whitelist-source-range: "146.124.141.59/32, 146.124.141.60/32"
#   ingress.kubernetes.io/secure-backends: "false"
spec:
 tls:
 - hosts:
   # fully-qualified domain name of the BAI admin REST service
   - grafana.iotfeds.intracom-telecom.com
   secretName: wildcard-ingress-tls
 rules:
 - host: grafana.iotfeds.intracom-telecom.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: prometheus-grafana
           port:
             number: 80
