ingress/symbiote-coreinterface-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: symbiote-coreinterface-ingress
 namespace: symbiote-core
 annotations:
   kubernetes.io/ingress.class: nginx
#   nginx.ingress.kubernetes.io/whitelist-source-range: "146.124.141.59/32, 146.124.141.60/32"
#   ingress.kubernetes.io/secure-backends: "false"
spec:
 tls:
 - hosts:
   # fully-qualified domain name of the BAI admin REST service
   - coreinterface.iotfeds.intracom-telecom.com
   secretName: wildcard-ingress-tls
 rules:
 - host: coreinterface.iotfeds.intracom-telecom.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: symbiote-coreinterface
           port:
             number: 8100
